appId: ${APP_ID}
name: 'Location Search'
---
# Differentiate between from and to locations
- runFlow:
    when:
      true: ${SEARCH_TYPE == 'from'}
    commands:
      - extendedWaitUntil:
          visible:
            id: ${output.search.from}
          timeout: 10000
          label: 'Wait for search button'
      - tapOn:
          id: ${output.search.from}
          label: 'Open location search'
- runFlow:
    when:
      true: ${SEARCH_TYPE == 'to'}
    commands:
      - extendedWaitUntil:
          visible:
            id: ${output.search.to}
          timeout: 10000
          label: 'Wait for search button'
      - tapOn:
          id: ${output.search.to}
          label: 'Open location search'

- extendedWaitUntil:
    visible:
      id: ${output.search.input}
    timeout: 5000
    label: 'Wait for search input'
- tapOn:
    id: ${output.search.input}
    label: 'Select search input'
- eraseText
- inputText:
    text: ${SEARCH_TEXT}
    label: 'Type search query'

# Whether to check/uncheck the only stop place checkbox
- runFlow:
    when:
      true: ${ONLY_STOP_PLACE == 'true'}
      visible:
        id: 'checkbox'
        selected: false
        childOf:
          id: ${output.search.onlyStopPlaces}
    commands:
      - tapOn:
          id: ${output.global.checkbox}
          childOf:
            id: ${output.search.onlyStopPlaces}
          label: 'Ensure only stop places is checked'
- runFlow:
    when:
      true: ${ONLY_STOP_PLACE == 'false'}
      visible:
        id: ${output.global.checkbox}
        selected: true
        childOf:
          id: ${output.search.onlyStopPlaces}
    commands:
      - tapOn:
          id: ${output.global.checkbox}
          childOf:
            id: ${output.search.onlyStopPlaces}
          label: 'Ensure only stop places is NOT checked'

- extendedWaitUntil:
    visible:
      id: ${output.search.resultItem()}
    timeout: 10000
    label: 'Wait for search results'
- tapOn:
    id: ${output.search.resultItem()}
    label: 'Select first result'
