appId: ${APP_ID}
name: 'Log out'
---
- tapOn:
    id: ${output.nav.menu.profile}
    label: 'Navigate to profile tab'
- scrollUntilVisible:
    element:
      id: ${output.profile.logOut}
    direction: DOWN
    timeout: 10000
    label: 'Scroll to log out button'
- tapOn:
    id: ${output.profile.logOut}
    label: 'Log out'
- extendedWaitUntil:
    visible:
      text: 'Log out'
    timeout: 5000
    label: 'Wait for OS location dialog'
- tapOn:
    text: 'Log out'
    label: 'Confirm log out'
