appId: ${APP_ID}
name: 'Login onboarding'
---
- extendedWaitUntil:
    visible:
      id: ${output.onboarding.loading}
    timeout: 15000
    label: 'Wait for loading screen'
- extendedWaitUntil:
    notVisible:
      id: ${output.onboarding.loading}
    timeout: 30000
    label: 'Wait for loading screen to disappear'

- runFlow:
    file: ../login.yaml
    env:
      PHONE_NUMBER: ${PHONE_NUMBER}
      OTP: ${OTP}
    label: 'Login with phone'

- extendedWaitUntil:
    visible:
      id: ${output.onboarding.permissions.location}
    timeout: 10000
    label: 'Wait for location permission button'
- tapOn:
    id: ${output.onboarding.permissions.location}
    label: 'Request location permission'

- extendedWaitUntil:
    visible:
      text: 'Deny'
    timeout: 5000
    label: 'Wait for OS location dialog'
- tapOn:
    text: 'Deny'
    label: 'Deny location permission'

- extendedWaitUntil:
    visible:
      id: ${output.tokenToggle.infoBox}
    timeout: 5000
    optional: true
    label: 'Wait for travel token box (if exists)'
- runFlow:
    when:
      visible:
        id: ${output.tokenToggle.infoBox}
    commands:
      - tapOn:
          id: ${output.global.nextButton}
          label: 'Accept inspection (if exists)'
      - runFlow:
          when:
            true: ${INSPECTION == 'true'}
          file: ../cleanUpMobileToken.yaml
          label: 'Clean up all tokens'
    label: 'Move inspection (if not this device)'

- extendedWaitUntil:
    visible:
      id: ${output.nav.menu.assistant}
    timeout: 10000
    label: 'Wait for Assistant tab'
