appId: ${APP_ID}
name: 'Change time for travel search'
env:
  # take | assert
  SCREENSHOT_MODE: 'assert'
---
- evalScript: ${output.myFromPlace = 'Prinsens gate'}
- evalScript: ${output.myToPlace = 'Melhus skysstasjon'}

- tapOn:
    id: ${output.nav.menu.assistant}
    label: 'Navigate to Assistant tab'

# Search
- runFlow:
    file: ../../common/locationSearch.yaml
    env:
      SEARCH_TYPE: 'from'
      SEARCH_TEXT: ${output.myFromPlace}
      ONLY_STOP_PLACE: 'true'
    label: 'Search from'
- runFlow:
    file: ../../common/locationSearch.yaml
    env:
      SEARCH_TYPE: 'to'
      SEARCH_TEXT: ${output.myToPlace}
      ONLY_STOP_PLACE: 'true'
    label: 'Search to'

# Search results
- extendedWaitUntil:
    visible:
      id: ${output.tripSearch.result(0)}
    timeout: 20000
    label: 'Wait for trip results'

# Change the departure time
- runFlow:
    file: ../../common/changeDateTime.yaml
    env:
      MODE: 'assistant'
      DAY: 1
      HOUR: 2
      AM_PM: 'AM'

# Search results
- extendedWaitUntil:
    visible:
      id: ${output.tripSearch.result(0)}
    timeout: 20000
    label: 'Wait for trip results'
- runFlow:
    file: ../../common/screenshot.yaml
    env:
      FILE: travelSearch/tripResult
      MODE: ${SCREENSHOT_MODE}
      ID: ${output.tripSearch.result(0)}
    label: ${'Screenshot_' + SCREENSHOT_MODE}

- tapOn:
    id: ${output.nav.menu.assistant}
    label: 'Navigate to Assistant tab'
